--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "cross-env NODE_ENV=production remix build",
-    "dev": "cross-env NODE_ENV=development remix dev",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -o ./app/tailwind.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
     "postinstall": "remix setup node"
   },
   "dependencies": {
@@ -20,8 +22,10 @@
     "@remix-run/dev": "^1.2.3",
     "@remix-run/eslint-config": "^1.2.3",
     "@remix-run/serve": "^1.2.3",
+    "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.9.0"
+    "eslint": "^8.9.0",
+    "tailwindcss": "^3.0.23"
   },
   "engines": {
     "node": ">=14"
